syntax = "proto3";

package transactions;

option go_package = "/transactions-proto";

message Transaction{
    float value = 1;
    int32 from_user_id = 2;
    int32 to_user_id = 3;
}

message TransactionRequest{
    Transaction transactionEntry = 1;
}

message TransactionResponse{
    bool success = 1;
    string result = 2;
}

message Balance{
    int32 user_id = 1;
    float balance = 2;
}

message BalanceRequest{
    Balance balanceEntry = 1;
}

message BalanceResponse{
    bool success = 1;
    string result = 2;
}

message VerifyIfUserValidForTransaction{
    float value_transaction = 1;
    int32 from_user_id = 2;
    int32 to_user_id = 3;
}

message VerifyIfUserValidForTransactionRequest{
    VerifyIfUserValidForTransaction verifyIfUserValid = 1;
}

message VerifyIfUserValidForTransactionResponse{
    bool success = 1;
    string result = 2;
}

service TransactionService {
    rpc CreateTransaction(TransactionRequest) returns (TransactionResponse);
    rpc CreateBalance(BalanceRequest) returns (BalanceResponse);
    rpc VerifyIfUserValidForTransaction(VerifyIfUserValidForTransactionRequest) returns (VerifyIfUserValidForTransactionResponse);
}

